@@ -1,0 +1,91 @@
+?openmp_logging = false
+?vis_history = false
+?integration_timer = false
+?pacify = true
+openmp_num_threads = 1
+SM.mb =>  4.2000000E+00
+SM.mmu =>  5.0000000E+00
+?use_vamp_equivalences = false
+?alpha_s_is_fixed = false
+?alpha_s_from_mz = true
+$fks_mapping_type = "resonances"
+| Process library 'soft_mismatch_lib': recorded process 'mismatch_p1'
+seed = 2222
+sqrts =  5.0000000E+02
+| Integrate: current process library needs compilation
+| Process library 'soft_mismatch_lib': compiling ...
+| Process library 'soft_mismatch_lib': writing makefile
+| Process library 'soft_mismatch_lib': removing old files
+| Process library 'soft_mismatch_lib': writing driver
+| Process library 'soft_mismatch_lib': creating source code
+| Process library 'soft_mismatch_lib': compiling sources
+| Process library 'soft_mismatch_lib': linking
+| Process library 'soft_mismatch_lib': loading
+| Process library 'soft_mismatch_lib': ... success.
+| Integrate: compilation done
+| QCD alpha: using a running strong coupling
+| RNG: Initializing TAO random-number generator
+| RNG: Setting seed for random-number generator to 2222
+| Initializing integration for process mismatch_p1:
+| ------------------------------------------------------------------------
+| Process [scattering]: 'mismatch_p1'
+|   Library name  = 'soft_mismatch_lib'
+|   Process index = 1
+|   Process components:
+|     1: 'mismatch_p1_i1':   e+, e- => b, bbar, mu-, mu+ [inactive]
+|     2: 'mismatch_p1_i2':   e+, e- => b, bbar, mu-, mu+, gl [inactive], [Real]
+|     3: 'mismatch_p1_i3':   e+, e- => b, bbar, mu-, mu+ [inactive], [Virtual]
+|     4: 'mismatch_p1_i4':   e+, e- => b, bbar, mu-, mu+ [inactive], [Subtraction]
+|     5: 'mismatch_p1_i5':   e+, e- => b, bbar, mu-, mu+, gl [omega], [Mismatch]
+| ------------------------------------------------------------------------
+| Beam structure: [any particles]
+| Beam data (collision):
+|   e+  (mass = 5.1099700E-04 GeV)
+|   e-  (mass = 5.1099700E-04 GeV)
+|   sqrts = 5.000000000000E+02 GeV
+| Phase space: generating configuration ...
+| Phase space: ... success.
+| Phase space: writing configuration file 'mismatch_p1_i1.phs'
+| Phase space: 54 channels, 8 dimensions
+| Phase space: found 54 channels, collected in 12 groves.
+| Phase space: no equivalences between channels used.
+| Phase space: wood
+| Phase space: 54 channels, 11 dimensions
+| Phase space: found 54 channels, collected in 12 groves.
+| Phase space: no equivalences between channels used.
+| Phase space: wood
+| Phase space: generating configuration ...
+| Phase space: ... success.
+| Phase space: writing configuration file 'mismatch_p1_i3.phs'
+| Phase space: 54 channels, 8 dimensions
+| Phase space: found 54 channels, collected in 12 groves.
+| Phase space: no equivalences between channels used.
+| Phase space: wood
+| Phase space: generating configuration ...
+| Phase space: ... success.
+| Phase space: writing configuration file 'mismatch_p1_i4.phs'
+| Phase space: 54 channels, 8 dimensions
+| Phase space: found 54 channels, collected in 12 groves.
+| Phase space: no equivalences between channels used.
+| Phase space: wood
+| Phase space: 54 channels, 11 dimensions
+| Phase space: found 54 channels, collected in 12 groves.
+| Phase space: no equivalences between channels used.
+| Phase space: wood
+Warning: No cuts have been defined.
+| Starting integration for process 'mismatch_p1' part 'Mismatch'
+| Integrate: iterations = 2:10000:"gw"
+| Integrator: 12 chains, 54 channels, 11 dimensions
+| Integrator: 10000 initial calls, 20 bins, stratified = T
+| Integrator: VAMP
+|=============================================================================|
+| It      Calls  Integral[fb]  Error[fb]   Err[%]    Acc  Eff[%]   Chi2 N[It] |
+|=============================================================================|
+   1       9990    -3.158E+00   1.51E-01    4.78    4.78     4.1
+   2       9963    -3.419E+00   9.10E-02    2.66    2.66     4.2
+|-----------------------------------------------------------------------------|
+   2      19953    -3.349E+00   7.79E-02    2.33    3.29     4.2    2.18   2
+|=============================================================================|
+| There were no errors and    1 warning(s).
+| WHIZARD run finished.
+|=============================================================================|
