@@ -107,9 +107,9 @@ Output for diagnostics.  Non-advancing.
     u = given_output_unit (unit)
     write (u, "(1x,A,1x,A)", advance="no")  char (par%name), "= "
     select type (par)
-    class is (modelpar_real_t)
+    type is (modelpar_real_t)
        write (u, "(" // FMT_19 // ")", advance="no")  par%value
-    class is (modelpar_complex_t)
+    type is (modelpar_complex_t)
        write (u, "(" // FMT_19 // ",1x,'+',1x," // FMT_19 // ",1x,'I')", &
             advance="no")  par%value
     end select
@@ -127,9 +127,9 @@ Pretty-printed on separate line, with fixed line length
     character(len=l) :: buffer
     buffer = par%name
     select type (par)
-    class is (modelpar_real_t)
+    type is (modelpar_real_t)
        write (u, "(4x,A,1x,'=',1x," // FMT_19 // ")")  buffer, par%value
-    class is (modelpar_complex_t)
+    type is (modelpar_complex_t)
        write (u, "(4x,A,1x,'=',1x," // FMT_19 // ",1x,'+',1x," &
             // FMT_19 // ",1x,'I')")  buffer, par%value
     end select
@@ -175,9 +175,9 @@ name is also fixed.
     class(modelpar_data_t), intent(inout) :: par
     real(default), intent(in) :: value
     select type (par)
-    class is (modelpar_real_t)
+    type is (modelpar_real_t)
        par%value = value
-    class is (modelpar_complex_t)
+    type is (modelpar_complex_t)
        par%value = value
     end select
   end subroutine modelpar_data_set_real
@@ -186,9 +186,9 @@ name is also fixed.
     class(modelpar_data_t), intent(inout) :: par
     complex(default), intent(in) :: value
     select type (par)
-    class is (modelpar_real_t)
+    type is (modelpar_real_t)
        par%value = value
-    class is (modelpar_complex_t)
+    type is (modelpar_complex_t)
        par%value = value
     end select
   end subroutine modelpar_data_set_complex
@@ -216,9 +216,9 @@ Return the value.  In case of a type mismatch, follow Fortran conventions.
     class(modelpar_data_t), intent(in), target :: par
     real(default) :: value
     select type (par)
-    class is (modelpar_real_t)
+    type is (modelpar_real_t)
        value = par%value
-    class is (modelpar_complex_t)
+    type is (modelpar_complex_t)
        value = par%value
     end select
   end function modelpar_data_get_real
@@ -227,9 +227,9 @@ Return the value.  In case of a type mismatch, follow Fortran conventions.
     class(modelpar_data_t), intent(in), target :: par
     complex(default) :: value
     select type (par)
-    class is (modelpar_real_t)
+    type is (modelpar_real_t)
        value = par%value
-    class is (modelpar_complex_t)
+    type is (modelpar_complex_t)
        value = par%value
     end select
   end function modelpar_data_get_complex
@@ -246,7 +246,7 @@ Return a pointer to the value.  This makes sense only for matching types.
     class(modelpar_data_t), intent(in), target :: par
     real(default), pointer :: ptr
     select type (par)
-    class is (modelpar_real_t)
+    type is (modelpar_real_t)
        ptr => par%value
     class default
        ptr => null ()
@@ -257,7 +257,7 @@ Return a pointer to the value.  This makes sense only for matching types.
     class(modelpar_data_t), intent(in), target :: par
     complex(default), pointer :: ptr
     select type (par)
-    class is (modelpar_complex_t)
+    type is (modelpar_complex_t)
        ptr => par%value
     class default
        ptr => null ()
