@@ -7,6 +7,9 @@ Use svn log to see detailed changes.
 2016-09-30
 	RELEASE: version 2.3.2
 
+2016-09-06
+	Introduce main configure summary
+	
 2016-08-26
 	Fix memory leak in event generation
 	
